syntax = "proto3";

package greet.dto;

option java_package = "ofedorova.greet.dto";
option java_multiple_files = true;

message Greet {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greet greet = 1;
}

message GreetResponse {
  string message = 1;
}
